Fixed topbar whitespace overflow

--- a/src/Topbar/TopBarNavStyles.css
+++ b/src/Topbar/TopBarNavStyles.css
@@ -21,10 +21,8 @@
 }
 
 .right-nav {
-  position: absolute;
-  right: 1rem; /* stick to right */
-  /* display: flex; */
-  gap: 1rem;
+  display: flex;
+  gap: 0.5rem;
 }
 
 nav a {
@@ -39,6 +37,18 @@ nav a:hover {
   color: #ff9900;
 }
 
+@media (max-width: 768px) {
+  .top-nav {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .center-nav,
+  .right-nav {
+    justify-content: center;
+    margin-top: 5px;
+  }
+}
 
 
 /* If you want the topbar to be fixed, uncomment the position in .nav and this below as well  */
