--- a/src/components/AboutPage/About.css
+++ b/src/components/AboutPage/About.css
@@ -4,6 +4,7 @@
   justify-content: center; /* center horizontally */
   flex-wrap: wrap;         /* responsive on small screens */
   max-width: 1000px;
+  max-height: 440px;
   margin: 3rem auto;
   padding: 2rem;
 }
@@ -16,6 +17,7 @@
 }
 
 .about-text h1 {
+  text-align: left;
   margin-bottom: 1.5rem;
   font-size: 1.4rem;
 }
@@ -27,7 +29,6 @@
 }
 
 .about-photo {
-  flex: 1;
   min-width: 250px;
   display: flex;
   justify-content: center;
